--- a/RupBNB/Pages/createDB.html
+++ b/RupBNB/Pages/createDB.html
@@ -7,9 +7,9 @@
     <script src="../Scripts/jquery-3.4.1.js"></script>
     <script src="../Scripts/ajaxCalls.js"></script>
 
-    <!--<script>
+    <script>
 
-        let string = "listing";
+        let string = "host";
 
         ajaxCall("POST", "../api/DB", JSON.stringify(string), scb, ecb);
 
@@ -21,7 +21,7 @@
             console.log(err);
         }
 
-    </script>-->
+    </script>
 
 </head>
 <body>
