upload reviews just 8319

--- a/RupBNB/Pages/createDB.html
+++ b/RupBNB/Pages/createDB.html
@@ -11,7 +11,7 @@
 
         let string = "listing";
 
-        ajaxCall("POST", "../api/DB", JSON.stringify("listing"), scb, ecb);
+        ajaxCall("POST", "../api/DB", JSON.stringify("review"), scb, ecb);
 
         function scb(succs) {
             console.log("enter: " + succs);
