upload new DB and add template

--- a/RupBNB/Pages/createDB.html
+++ b/RupBNB/Pages/createDB.html
@@ -7,9 +7,7 @@
     <script src="../Scripts/jquery-3.4.1.js"></script>
     <script src="../Scripts/ajaxCalls.js"></script>
 
-    <script>
-
-        let string = "listing";
+    <!--<script>
 
         ajaxCall("POST", "../api/DB", JSON.stringify("review"), scb, ecb);
 
@@ -21,7 +19,7 @@
             console.log(err);
         }
 
-    </script>
+    </script>-->
 
 </head>
 <body>
