--- a/RupBNB/Pages/apartments.html
+++ b/RupBNB/Pages/apartments.html
@@ -8,6 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script
+  src="https://code.jquery.com/ui/1.13.0/jquery-ui.min.js"
+  integrity="sha256-hlKLmzaRlE8SCJC1Kw8zoUbU8BxA+8kR3gseuKfMjxA="
+  crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/8f38e270eb.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="../CSS/main.css">
@@ -16,7 +20,6 @@
 
     <!-- This Page Start Here -->
     <link rel="stylesheet" href="../CSS/apartments.css">
-    <script src="../Scripts/apartments.js"></script>
 </head>
 <body>
     <div class="container">
@@ -29,9 +32,25 @@
         <!-- Search Filter -->
         <div id="searchFilterContainer">
             <div id="serachFilter" class="row row-cols-3 row-cols-md-6">
-                <div class="col">
-                    <label for="customRange1" class="form-label">Max USD</label>
-                    <input type="range" class="form-range" id="customRange1">
+                
+                <div id="range" class="col">
+                    <div class="priceSlider">
+                        <div class="min-max">
+                         <div class="min">
+                            <span id="min-value"></span>
+                         </div>
+
+                         <div class="max">
+                            <span id="max-value"></span>
+                         </div>     
+                        </div> 
+                        <div class="min-max-range">
+                        <input type="range" min="0" max="1000" value="0" class="range" id="min">
+                        <input type="range" min="1001" max="2000" value="2000" class="range" id="max">      
+                        </div>    
+                            
+                        <div style="clear: both;"></div>    
+                    </div> 
                 </div>
                 <div class="col">
                     <label for="where" class="form-label">Where?</label>
@@ -62,5 +81,6 @@
 
     </div>
 
+    <script src="../Scripts/apartments.js"></script>
 </body>
 </html>
