Update admin view

--- a/RupBNB/Pages/adminView.html
+++ b/RupBNB/Pages/adminView.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../CSS/header.css">
     <script src="../Scripts/header.js"></script>
     <script src="../Scripts/adminView.js"></script>
-
+    <script src="../Scripts/ajaxCalls.js"></script>
 </head>
 <body>
     <div class="container">
@@ -35,9 +35,9 @@
                     <thead>
                         <tr>
                             <th>Register date</th>
-                            <th>Amount of rentals</th>
+                            <th>Total rentals</th>
                             <th>Total income</th>
-                            <th>Amount of cancellations</th>
+                            <th>Total cancels</th>
                         </tr>
                     </thead>
                 </table>
@@ -50,7 +50,7 @@
                             <th>Register date</th>
                             <th>Number of apartments</th>
                             <th>Total income</th>
-                            <th>Amount of cancellations</th>
+                            <th>Total cancels</th>
                         </tr>
                     </thead>
                 </table>
@@ -61,7 +61,7 @@
                     <thead>
                         <tr>
                             <th>Days rented</th>
-                            <th>Amount of cancellations</th>
+                            <th>Total cancels</th>
                         </tr>
                     </thead>
                 </table>
