--- a/RupBNB/Pages/signUp.html
+++ b/RupBNB/Pages/signUp.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -13,8 +13,9 @@
 
     <link rel="stylesheet" href="../CSS/main.css">
     <link rel="stylesheet" href="../CSS/header.css">
+    <script src="../Scripts/ajaxCalls.js"></script>
     <script src="../Scripts/header.js"></script>
-
+    <script src="../Scripts/signUpScript.js"></script>
 
     <!-- This Page Start Here -->
     <link rel="stylesheet" href="../CSS/login-signup.css">
@@ -28,33 +29,52 @@
         </div>
 
         <div id="formContainer">
-            <form id="loginForm">
+            <form id="signUpForm">
                 <div class="mb-3">
                     <h1 id="headline">SignUp</h1>
                 </div>
                 <div class="mb-3">
-                  <label for="exampleInputEmail1" class="form-label">Email address</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  <label for="forEmail" class="form-label">Email address</label>
+                  <input type="email" id="email"
+                         class="form-control"  
+                         aria-describedby="emailHelp"
+                         placeholder="Email" required>
                   <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                 </div>
                 <div class="mb-3">
-                  <label for="exampleInputPassword1" class="form-label">Password</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1">
+                  <label for="forPassword" class="form-label">Password</label>
+                  <input type="password" id="password"
+                         pattern="^.{8,30}$"
+						 oninvalid="this.setCustomValidity('Password must be 8-30 characters')"
+						 oninput="this.setCustomValidity('')"
+                         class="form-control"
+                         placeholder="Password" required>
                 </div>
                 <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">First Name</label>
-                    <input type="text" class="form-control" >
+                    <label for="forFirstName" class="form-label">First Name</label>
+                    <input type="text" id="firstName" 
+                           pattern="[A-Za-z]{3,20}"
+						   oninvalid="this.setCustomValidity('First Name must be Minimun 3 characters - only letters')"
+						   oninput="this.setCustomValidity('')"
+                           class="form-control"
+                           placeholder="First Name" required >
                 </div>
                 <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Last Name</label>
-                    <input type="text" class="form-control">
+                    <label for="forLastName" class="form-label">Last Name</label>
+                    <input type="text" id="lastName"
+                           pattern="[A-Za-z]{3,20}"
+						   oninvalid="this.setCustomValidity('Last Name must be Minimun 3 characters - only letters')"
+						   oninput="this.setCustomValidity('')"
+                           class="form-control"
+                           placeholder="Last Name" required>
                 </div>
                 <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Birth Date</label>
-                    <input type="date" class="form-control">
+                    <label for="forBirthDate" class="form-label">Birth Date</label>
+                    <input type="date" id="birthDate"
+                           class="form-control" required>
                 </div>
                 <div class="d-grid gap-2">
-                    <button type="submit" class="btn btn-primary">SignUp</button>
+                    <button value="Submit" id="signUpBtn" class="btn btn-primary">SignUp</button>
                 </div>
             </form>
         </div>
