--- a/RupBNB/Pages/adminView.html
+++ b/RupBNB/Pages/adminView.html
@@ -15,7 +15,22 @@
     <script src="../Scripts/header.js"></script>
     <script src="../Scripts/adminView.js"></script>
     <script src="../Scripts/ajaxCalls.js"></script>
+
+    <style>
+        .spinner {
+            position: absolute;
+            height: 100px;
+            width: 100px;
+            top: 50%;
+            left: 50%;
+            margin-left: -50px;
+            margin-top: -50px;
+            background: url(/link/to/your/image);
+            background-size: 100%;
+        }
+    </style>
 </head>
+
 <body>
     <div class="container">
         <!-- NavBar -->
@@ -30,7 +45,9 @@
         </nav>
         <div class="tab-content" id="nav-tabContent">
             <!--User Datatable-->
+
             <div class="tab-pane fade show active" id="nav-user" role="tabpanel" aria-labelledby="nav-user-tab">
+
                 <table id="UserTable" class="display nowrap" style="width:100%">
                     <thead>
                         <tr>
@@ -41,6 +58,7 @@
                         </tr>
                     </thead>
                 </table>
+
             </div>
             <!--Host Datatable-->
             <div class="tab-pane fade" id="nav-host" role="tabpanel" aria-labelledby="nav-host-tab">
@@ -65,6 +83,11 @@
                         </tr>
                     </thead>
                 </table>
+            </div>
+        </div>
+        <div class="text-center">
+            <div class="spinner spinner-border" role="status">
+                <span class="sr-only">Loading...</span>
             </div>
         </div>
     </div>
