--- a/RupBNB/Pages/adminView.html
+++ b/RupBNB/Pages/adminView.html
@@ -85,9 +85,9 @@
                 </table>
             </div>
         </div>
-        <div class="text-center">
-            <div class="spinner spinner-border" role="status">
-                <span class="sr-only">Loading...</span>
+        <div id="spinner" class="text-center">
+            <div class="spinner spinner-border">
+                <span class="visually-hidden">Loading...</span>
             </div>
         </div>
     </div>
