--- a/RupBNB/Pages/createDB.html
+++ b/RupBNB/Pages/createDB.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <title></title>
 
-    <script src="../Scripts/jquery-3.4.1.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="../Scripts/ajaxCalls.js"></script>
 
-    <!--<script>
+    <script>
 
         ajaxCall("POST", "../api/DB", JSON.stringify("review"), scb, ecb);
 
@@ -19,7 +19,7 @@
             console.log(err);
         }
 
-    </script>-->
+    </script>
 
 </head>
 <body>
