--- a/RupBNB/Pages/seeApart.html
+++ b/RupBNB/Pages/seeApart.html
@@ -18,6 +18,7 @@
     <!-- This Page Start Here -->
     <link rel="stylesheet" href="../CSS/seeApart.css">
     <script src="../Scripts/seeApart.js"></script>
+    <script src="../Scripts/ajaxCalls.js"></script>
 
 
 </head>
