--- a/RupBNB/Pages/apartments.html
+++ b/RupBNB/Pages/apartments.html
@@ -54,6 +54,16 @@
                     </div> 
                 </div>
                 <div class="col">
+                    <select class="form-select" aria-label="Default select example">
+                        <option selected>Min Star</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">3</option>
+                        <option value="5">3</option>
+                    </select>
+                </div>
+                <div class="col">
                     <label for="where" class="form-label">Where?</label>
                     <input type="text" class="form-control" name="where">
                 </div>
