--- a/RupBNB/Pages/login.html
+++ b/RupBNB/Pages/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -13,7 +13,10 @@
     <link rel="stylesheet" href="../CSS/main.css">
     <link rel="stylesheet" href="../CSS/header.css">
     <script src="../Scripts/header.js"></script>
-    
+
+    <script src="../Scripts/ajaxCalls.js"></script>
+    <script src="../Scripts/loginScript.js"></script>
+
     <!-- This Page Start Here -->
     <link rel="stylesheet" href="../CSS/login-signup.css">
 
@@ -29,17 +32,20 @@
                     <h1 id="headline">Login</h1>
                 </div>
                 <div class="mb-3">
-                  <label for="exampleInputEmail1" class="form-label">Email address</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  <label for="forEmail" class="form-label">Email address</label>
+                  <input type="email" id="email"
+                         class="form-control"  
+                         aria-describedby="emailHelp" required>
                   <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                 </div>
                 <div class="mb-3">
-                  <label for="exampleInputPassword1" class="form-label">Password</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1">
+                  <label for="forPassword" class="form-label">Password</label>
+                  <input type="password" id="password"
+                         class="form-control" required>
                 </div>
                 <div class="d-grid gap-2">
-                    <button type="submit" class="btn btn-primary">SignIn</button>
-                    <button type="submit" class="btn btn-primary">SignUp</button>
+                    <button type="submit" class="btn btn-primary">Login</button>
+                    <input type="button" id="signUpBTN" class="btn btn-primary" value="SignUp">
                 </div>
             </form>
         </div>
