add modal for reservation
fix scrolling for mobile in apartments.html

--- a/RupBNB/Pages/apartments.html
+++ b/RupBNB/Pages/apartments.html
@@ -64,7 +64,7 @@
                 </div>
                 <div class="col">
                     <label for="rooms" class="form-label">Accommodates</label>
-                    <input type="number" min="1" value="1">
+                    <input type="number" class="form-control" min="1" value="1">
                 </div>
                 <div class="col">
                     <label for="checkIn" class="form-label">Check In</label>
