--- a/RupBNB/Pages/adminView.html
+++ b/RupBNB/Pages/adminView.html
@@ -97,11 +97,11 @@
                 </table>
             </div>
         </div>
-        <!--<div id="spinner" class="text-center">
+        <div id="spinner" class="text-center">
             <div class="spinner spinner-border">
                 <span class="visually-hidden">Loading...</span>
             </div>
-        </div>-->
+        </div>
     </div>
 
 </body>
