--- a/RupBNB/Pages/apartments.html
+++ b/RupBNB/Pages/apartments.html
@@ -35,8 +35,11 @@
             <div id="serachFilter" class="row row-cols-2 row-cols-md-4">
                 
                 <div class="col">
-                    <label for="maxUSD" class="form-label">Max USD</label>
-                    <input type="range" class="form-range" id="maxUSD">
+                    <div class="d-flex justify-content-between">
+                        <label for="maxUSD" class="form-label">Max USD</label>
+                        <span id="maxUSD">No Max</span>
+                    </div>
+                    <input type="range" min="0" max="1000" value="0"  step="10" class="form-range" id="priceRange">
                 </div>
                 <div class="col">
                     <label for="rating" class="form-label">Min Rating</label>
