--- a/RupBNB/Pages/seeApart.html
+++ b/RupBNB/Pages/seeApart.html
@@ -143,7 +143,7 @@
  
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                        <button type="button" class="btn btn-danger">Reserve</button>
+                        <button type="button" class="btn btn-danger" id="makeReservation">Reserve</button>
                     </div>
                 </div>
             </div>
