--- a/RupBNB/Pages/adminView.html
+++ b/RupBNB/Pages/adminView.html
@@ -99,7 +99,7 @@
                             <th>Apartment name</th>
                             <th>Days rented</th>
                             <th>Total cancels</th>
-                            <th>Link to apartment</th>
+                            <!--<th>Link to apartment</th>-->
                         </tr>
                     </thead>
                 </table>
