add distance to center parameter

--- a/RupBNB/Pages/createDB.html
+++ b/RupBNB/Pages/createDB.html
@@ -9,7 +9,7 @@
 
     <script>
 
-        ajaxCall("POST", "../api/DB", JSON.stringify("review"), scb, ecb);
+        ajaxCall("POST", "../api/DB", JSON.stringify("listing"), scb, ecb);
 
         function scb(succs) {
             console.log("enter: " + succs);
