--- a/RupBNB/Pages/adminView.html
+++ b/RupBNB/Pages/adminView.html
@@ -67,8 +67,8 @@
                             <th>User email</th>
                             <th>Register date</th>
                             <th>Total rentals</th>
-                            <th>Total income</th>
                             <th>Total cancels</th>
+                            <th>Total income</th>
                         </tr>
                     </thead>
                 </table>
@@ -82,8 +82,8 @@
                             <th>Host email</th>
                             <th>Register date</th>
                             <th>Number of apartments</th>
-                            <th>Total income</th>
                             <th>Total cancels</th>
+                            <th>Total income</th>
                         </tr>
                     </thead>
                 </table>
@@ -98,7 +98,7 @@
                             <th>Apartment name</th>
                             <th>Days rented</th>
                             <th>Total cancels</th>
-                            <!--<th>Link to apartment</th>-->
+                            <th>Link to apartment</th>
                         </tr>
                     </thead>
                 </table>
