--- a/RupBNB/Pages/apartments.html
+++ b/RupBNB/Pages/apartments.html
@@ -33,13 +33,13 @@
         <!-- Search Filter -->
         <div id="searchFilterContainer">
             <div id="serachFilter" class="row row-cols-2 row-cols-md-4">
-                
+
                 <div class="col">
                     <div class="d-flex justify-content-between">
                         <label for="maxUSD" class="form-label">Max USD</label>
                         <span id="maxUSD">No Max</span>
                     </div>
-                    <input type="range" min="0" max="1000" value="0"  step="10" class="form-range" id="priceRange">
+                    <input type="range" min="0" max="1000" value="0" step="10" class="form-range" id="priceRange">
                 </div>
                 <div class="col">
                     <label for="rating" class="form-label">Min Rating</label>
@@ -100,6 +100,11 @@
             </div>
             <div id="mapContainer" class="col" style="display: none;">
                 <div id="map"></div>
+            </div>
+        </div>
+        <div id="spinner" class="text-center">
+            <div class="spinner spinner-border">
+                <span class="visually-hidden">Loading...</span>
             </div>
         </div>
     </div>
