add cancel reservation option in user profile page

--- a/RupBNB/Pages/login.html
+++ b/RupBNB/Pages/login.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../CSS/main.css">
     <link rel="stylesheet" href="../CSS/header.css">
     <script src="../Scripts/header.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <script src="../Scripts/ajaxCalls.js"></script>
     <script src="../Scripts/loginScript.js"></script>
