--- a/RupBNB/Pages/profilePage.html
+++ b/RupBNB/Pages/profilePage.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="../CSS/main.css">
     <link rel="stylesheet" href="../CSS/header.css">
     <script src="../Scripts/header.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <script src="../Scripts/userProfilePage.js"></script>
     <script src="../Scripts/ajaxCalls.js"></script>
 
@@ -67,7 +69,7 @@
                     </div>
                 </div>
                
-                <div id="orders">
+                <!--<div id="orders">
                     <div class="card m-auto mt-5" style="width: 18rem;">
                         <img src="https://a0.muscache.com/pictures/10272854/8dcca016_original.jpg" class="card-img-top">
                         <div class="card-body">
@@ -92,7 +94,7 @@
                             <a href="#" class="btn btn-primary">Review</a>
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
           </div>
         </div>
