--- a/RupBNB/Pages/notFound.html
+++ b/RupBNB/Pages/notFound.html
@@ -10,7 +10,7 @@
 
     <script>
         $(document).ready(() => {
-            let message = sessionStorage.getItem("errorMessage");
+            let message = sessionStorage.getItem("CGroup4_errorMessage");
             $("#message").html(message);
         })
     </script>
