update profile design

--- a/RupBNB/Pages/seeApart.html
+++ b/RupBNB/Pages/seeApart.html
@@ -48,6 +48,7 @@
                 <div id="details" class="row row-cols-5"></div>
                 <h3>Ameneties:</h3>
                 <div id="ameneties" class="row row-cols-2"></div>
+                <div id="host" class="row"></div>
                 <h3>Location:</h3>
                 <div id="map"></div>
             </div>
