--- a/RupBNB/Pages/index.html
+++ b/RupBNB/Pages/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="../CSS/apartments.css">
 </head>
 <body>
-    <div class="container">
+    <!--<div class="container">-->
 
         <!-- NavBar -->
         <div id="MainHeader">
@@ -96,7 +96,7 @@
         <div id="cardMapContainer" class="row">
             <div id="cards" class="col overflow-auto">
                 <!-- Cards -->
-                <div class="container row row-cols-1 row-cols-md-4 g-4" id="cardContainer"></div>
+                <div class="container row row-cols-1 row-cols-md-3 row-cols-lg-4" id="cardContainer"></div>
             </div>
             <div id="mapContainer" class="col" style="display: none;">
                 <div id="map"></div>
@@ -107,7 +107,7 @@
                 <span class="visually-hidden">Loading...</span>
             </div>
         </div>
-    </div>
+    <!--</div>-->
 
     <script src="../Scripts/apartments.js"></script>
     <script
