update host in SeeApart and fix makeReservation

--- a/RupBNB/Pages/index.html
+++ b/RupBNB/Pages/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="../CSS/apartments.css">
 </head>
 <body>
-    <!--<div class="container">-->
+    <div class="container">
 
         <!-- NavBar -->
         <div id="MainHeader">
@@ -107,7 +107,7 @@
                 <span class="visually-hidden">Loading...</span>
             </div>
         </div>
-    <!--</div>-->
+    </div>
 
     <script src="../Scripts/apartments.js"></script>
     <script
