--- a/RupBNB/Pages/index.html
+++ b/RupBNB/Pages/index.html
@@ -63,7 +63,7 @@
                 </div>
                 <div class="col">
                     <div class="d-flex justify-content-between">
-                        <label for="distance" class="form-label">Distance to center:</label>
+                        <label for="distance" class="form-label">KM to center:</label>
                         <span id="maxDistance">No Max</span>
                     </div>
                     <input type="range" min="0" max="50" value="0" step="0.5" class="form-range" id="distanceRange">
