--- a/RupBNB/Pages/seeApart.html
+++ b/RupBNB/Pages/seeApart.html
@@ -9,6 +9,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/8f38e270eb.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="../CSS/main.css">
     <link rel="stylesheet" href="../CSS/header.css">
@@ -25,7 +28,7 @@
         <!-- NavBar -->
         <div id="MainHeader"></div>
         <!-- Apartment Details -->
-        <div id="apartmentDetails" class="row m-auto mt-5">
+        <div id="apartmentDetails" class="row m-auto mt-3 mt-md-5">
             <div class="col-12 col-md-7">
                 <div class="card mb-3">
                     <img id="image" src="" class="card-img-top" alt="...">
@@ -33,9 +36,9 @@
                         <h5 id="name" class="card-title"></h5>
                         <p id="description" class="card-text">
                             <span id="dots">...</span>
-                            <span id="more"></span>
+                            <span id="more" class="more"></span>
                         </p>
-                        <button onclick="expandText()" id="readBTN" class="btn btn-primary">Read more</button>
+                        <button onclick="expandText()" id="readBTN" class="btn">Show more</button>
                     </div>
                 </div>
             </div>
@@ -48,6 +51,14 @@
                 <div id="host" class="row"></div>
                 <h3 class="mt-2">Location:</h3>
                 <div id="map"></div>
+            </div>
+            <hr class="mt-3">
+            <div class="col-12 mb-5">
+                <div class="d-flex">
+                    <i id="scoreIconForReviewSection" class="fa-solid fa-star"></i>
+                    <h5 id="numReviews"></h5>
+                </div>
+                <div id="reviews" class="row row-cols-1 row-cols-md-2 mt-3"></div>
             </div>
         </div>
 
