--- a/RupBNB/Pages/adminView.html
+++ b/RupBNB/Pages/adminView.html
@@ -9,6 +9,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/8f38e270eb.js" crossorigin="anonymous"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-database.js"></script>
     <!--DataTable Style-->
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/2.2.3/css/buttons.dataTables.min.css">
@@ -27,10 +29,15 @@
     <link rel="stylesheet" href="../CSS/main.css">
     <link rel="stylesheet" href="../CSS/header.css">
     <link rel="stylesheet" href="../CSS/spinner.css">
+    <link rel="stylesheet" href="../CSS/chat.css">
+
 
     <script src="../Scripts/header.js"></script>
+    <script src="../Scripts/config.js"></script>
     <script src="../Scripts/adminView.js"></script>
     <script src="../Scripts/ajaxCalls.js"></script>
+
+
 </head>
 
 <body>
@@ -42,6 +49,7 @@
                 <button class="nav-link active" id="nav-user-tab" data-bs-toggle="tab" data-bs-target="#nav-user" type="button" role="tab" aria-controls="nav-user" aria-selected="true">Users</button>
                 <button onclick="renderHostsTables()" class="nav-link" id="nav-host-tab" data-bs-toggle="tab" data-bs-target="#nav-host" type="button" role="tab" aria-controls="nav-host" aria-selected="false">Hosts</button>
                 <button onclick="renderApartmentsTables()" class="nav-link" id="nav-apartment-tab" data-bs-toggle="tab" data-bs-target="#nav-apartment" type="button" role="tab" aria-controls="nav-apartment" aria-selected="false">Apartments</button>
+                <button class="nav-link" id="nav-chat-tab" data-bs-toggle="tab" data-bs-target="#nav-chat" type="button" role="tab" aria-controls="nav-chat" aria-selected="false">Chat</button>
             </div>
         </nav>
         <div class="tab-content" id="nav-tabContent">
@@ -74,7 +82,7 @@
                         </tr>
                     </thead>
                 </table>
-            </div> 
+            </div>
 
             <!--Apartment Datatable-->
             <div class="tab-pane fade" id="nav-apartment" role="tabpanel" aria-labelledby="nav-apartment-tab">
@@ -89,6 +97,55 @@
                         </tr>
                     </thead>
                 </table>
+            </div>
+
+            <!--Chat-->
+            <div class="tab-pane fade" id="nav-chat" role="tabpanel" aria-labelledby="nav-chat-tab">
+                <div class="container">
+                    <div class="row clearfix">
+                        <div class="col-lg-12">
+                            <div class="card chat-app">
+                                <div id="plist" class="people-list">
+                                    <div class="input-group">
+                                        <div class="input-group-prepend">
+                                            <span class="input-group-text"><i class="fa fa-search"></i></span>
+                                        </div>
+                                        <input type="text" class="form-control" placeholder="Search...">
+                                    </div>
+                                    <ul id="usersContainer" class="list-unstyled chat-list mt-2 mb-0">
+                                    </ul>
+
+                                </div>
+                                <div class="chat display-flex flex-column">
+                                    <div class="chat-header clearfix">
+                                        <div class="row">
+                                            <div class="col-lg-6">
+                                                <a href="javascript:void(0);" data-toggle="modal" data-target="#view_info">
+                                                    <img src="https://bootdey.com/img/Content/avatar/avatar2.png" alt="avatar">
+                                                </a>
+                                                <div class="chat-about">
+                                                    <h6 id="activeUserChat" class="m-b-0">Aiden Chavez</h6>
+                                                    <small>Last seen: 2 hours ago</small>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="chat-history overflow-auto">
+                                        <ul id="activeChat" class="m-b-0"></ul>
+                                    </div>
+                                    <div class="chat-message clearfix mt-auto">
+                                        <div class="input-group mb-0">
+                                            <div class="input-group-prepend">
+                                                <span class="input-group-text"><i onclick="sendMessage()" class="fa fa-send"></i></span>
+                                            </div>
+                                            <input id="newMessage" type="text" class="form-control" placeholder="Enter text here...">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div id="spinner" class="text-center">
