--- a/RupBNB/Pages/profilePage.html
+++ b/RupBNB/Pages/profilePage.html
@@ -9,17 +9,22 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/8f38e270eb.js" crossorigin="anonymous"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/7.14.6/firebase-database.js"></script>
+    <script src="../Scripts/ajaxCalls.js"></script>
 
     <link rel="stylesheet" href="../CSS/main.css">
     <link rel="stylesheet" href="../CSS/header.css">
     <script src="../Scripts/header.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-    <script src="../Scripts/userProfilePage.js"></script>
-    <script src="../Scripts/ajaxCalls.js"></script>
 
     <!-- This Page Start Here -->
     <link rel="stylesheet" href="../CSS/profilePage.css">
+    <link rel="stylesheet" href="../CSS/chat.css">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="../Scripts/config.js"></script>
+    <script src="../Scripts/userProfilePage.js"></script>
+
 
 </head>
 <body>
@@ -44,6 +49,7 @@
                         <button class="nav-link active" id="nav-futureReservations-tab" data-bs-toggle="tab" data-bs-target="#nav-futureReservations" type="button" role="tab" aria-controls="nav-futureReservations" aria-selected="true">Future Reservations</button>
                         <button onclick="getMyPastReservations()" class="nav-link" id="nav-pastReservations-tab" data-bs-toggle="tab" data-bs-target="#nav-pastReservations" type="button" role="tab" aria-controls="nav-pastReservations" aria-selected="false">Past Reservations</button>
                         <button onclick="getMyLikedApartments()" class="nav-link" id="nav-likedApartments-tab" data-bs-toggle="tab" data-bs-target="#nav-likedApartments" type="button" role="tab" aria-controls="nav-likedApartments" aria-selected="false">Liked Apartments</button>
+                        <button class="nav-link" id="nav-chat-tab" data-bs-toggle="tab" data-bs-target="#nav-chat" type="button" role="tab" aria-controls="nav-chat" aria-selected="false">Chat</button>
                     </div>
                 </nav>
                 <div id="orderContainer" class="container overflow-auto">
@@ -65,6 +71,27 @@
                         <!--Liked Apartments-->
                         <div class="tab-pane fade" id="nav-likedApartments" role="tabpanel" aria-labelledby="nav-likedApartments-tab">
                             <div id="likedApartmentsContainer" class="row row-cols-1 row-cols-md-4">
+
+                            </div>
+                        </div>
+
+                        <!--Chat-->
+                        <div class="tab-pane fade" id="nav-chat" role="tabpanel" aria-labelledby="nav-chat-tab">
+                            <div class="chat display-flex flex-column">
+
+                                <div class="chat-history">
+                                    <div class="chat-history overflow-auto">
+                                        <ul id="activeChat" class="m-b-0"></ul>
+                                    </div>
+                                    <div class="chat-message clearfix mt-auto">
+                                        <div class="input-group mb-0">
+                                            <div class="input-group-prepend">
+                                                <span class="input-group-text"><i onclick="sendMessage()" class="fa fa-send"></i></span>
+                                            </div>
+                                            <input id="newMessage" type="text" class="form-control" placeholder="Enter text here...">
+                                        </div>
+                                    </div>
+                                </div>
 
                             </div>
                         </div>
