--- a/RupBNB/Pages/index.html
+++ b/RupBNB/Pages/index.html
@@ -96,7 +96,9 @@
         <div id="cardMapContainer" class="row">
             <div id="cards" class="col overflow-auto">
                 <!-- Cards -->
-                <div class="container row row-cols-1 row-cols-md-3 row-cols-lg-4" id="cardContainer"></div>
+                <div class="container row row-cols-1 row-cols-md-3 row-cols-lg-4" id="cardContainer">
+
+                </div>
             </div>
             <div id="mapContainer" class="col" style="display: none;">
                 <div id="map"></div>
