--- a/RupBNB/Pages/seeApart.html
+++ b/RupBNB/Pages/seeApart.html
@@ -47,9 +47,11 @@
                 <div id="details" class="row row-cols-5"></div>
                 <h3>Ameneties:</h3>
                 <div id="ameneties" class="row row-cols-2"></div>
-                <h3>Host:</h3>
+                <div id="amenetiesMore" class="row row-cols-2" style="display: none;"></div>
+                <button id="amenetiesBTN" onclick="expandAmeneties()" class="reviewBTN" style="display: none;">Show more></button>
+                <h3 class="mt-3">Host:</h3>
                 <div id="host" class="row"></div>
-                <h3 class="mt-2">Location:</h3>
+                <h3 class="mt-3">Location:</h3>
                 <div id="map"></div>
             </div>
             <hr class="mt-3">
